Updated links and added a readme for google-homepage folder

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <body>
     <h1>Solutions for The Odin Project</h1>
     <p>This page contains links to solutions of <a href="https://github.com/orhanugurlu">Orhan Ugurlu</a> for The Odin Project.</p>
-    <p>Whole repository is <a href="">here</a>.</p>
+    <p>Whole repository is <a href="https://github.com/orhanugurlu/the_odin_project">here</a>.</p>
     <p>See below list to access each project's sources and view them in browser.</p>
     <ul>
-        <li>An imitation of Google search page (<a href="https://github.com/orhanugurlu/the_odin_project/google-homepage">Solution</a>) (<a href="https://orhanugurlu.github.io/the_odin_project/google-homepage/index.html">View in browser</a>)</li>
-        <li>An imitation of Google search results page (<a href="https://github.com/orhanugurlu/the_odin_project/google-homepage">Solution</a>) (<a href="https://orhanugurlu.github.io/the_odin_project/google-homepage/search-results.html">View in browser</a>)</li>
+        <li>An imitation of Google search page (<a href="https://github.com/orhanugurlu/the_odin_project/tree/master/google-homepage">Solution</a>) (<a href="https://orhanugurlu.github.io/the_odin_project/google-homepage/index.html">View in browser</a>)</li>
+        <li>An imitation of Google search results page (<a href="https://github.com/orhanugurlu/the_odin_project/tree/master/google-homepage">Solution</a>) (<a href="https://orhanugurlu.github.io/the_odin_project/google-homepage/search-results.html">View in browser</a>)</li>
     </ul>
   </body>
 </html>
