--- a/google-homepage/search-results.html
+++ b/google-homepage/search-results.html
@@ -3,10 +3,160 @@
   <head>
     <meta charset="utf-8">
     <title>build this webpage - Google Search</title>
+    <style>
+      @import url(http://fonts.googleapis.com/css?family=Roboto); 
+    </style>
     <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/results.css">
   </head>
   <body>
-      <p>Search results</p>
+      <div class="container">
+        <div class="logo"><img src="images/googlelogo_color_92x30dp.png" alt="Google Logo" width="92" height="30"></div>
+        <div class="search">
+            <div class="search-box">
+                <div class="search-box-text">
+                    <input type="text" value="build this webpage">
+                </div>
+                <div class="search-svg">
+                  <svg focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"></path></svg>
+                </div>
+                <span class="search-seperator"></span>              
+                <div class="search-svg">
+                  <svg focusable="false" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="m12 15c1.66 0 3-1.31 3-2.97v-7.02c0-1.66-1.34-3.01-3-3.01s-3 1.34-3 3.01v7.02c0 1.66 1.34 2.97 3 2.97z" fill="#4285f4"></path><path d="m11 18.08h2v3.92h-2z" fill="#34a853"></path><path d="m7.05 16.87c-1.27-1.33-2.05-2.83-2.05-4.87h2c0 1.45 0.56 2.42 1.47 3.38v0.32l-1.15 1.18z" fill="#f4b400"></path><path d="m12 16.93a4.97 5.25 0 0 1 -3.54 -1.55l-1.41 1.49c1.26 1.34 3.02 2.13 4.95 2.13 3.87 0 6.99-2.92 6.99-7h-1.99c0 2.92-2.24 4.93-5 4.93z" fill="#ea4335"></path></svg>                </div>
+                <div class="search-svg">
+                  <svg focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path></svg> 
+                </div>
+            </div>
+        </div>
+        <div class="login">
+          <div class="top-panel-item"><a href="#" class="apps-image">&nbsp;</a></div>
+          <div class="top-panel-item"><a href="#" class="sign-in">Sign In</a></div>
+        </div>
+        <div class="menu">
+          <div class="menu-item menu-item-first">
+            <div class="menu-svg">
+              <svg focusable="false" viewBox="0 0 24 24"><path d="M10 2v2a6 6 0 0 1 6 6h2a8 8 0 0 0-8-8" fill="#34A853"></path><path d="M10 4V2a8 8 0 0 0-8 8h2c0-3.3 2.7-6 6-6" fill="#EA4335"></path><path d="M4 10H2a8 8 0 0 0 8 8v-2c-3.3 0-6-2.69-6-6" fill="#FBBC04"></path><path d="M22 20.59l-5.69-5.69A7.96 7.96 0 0 0 18 10h-2a6 6 0 0 1-6 6v2c1.85 0 3.52-.64 4.88-1.68l5.69 5.69L22 20.59" fill="#4285F4"></path></svg>
+            </div>
+            All
+          </div>
+          <div class="menu-item">
+            <div class="menu-svg">
+              <svg focusable="false" viewBox="0 0 24 24"><path d="M12 11h6v2h-6v-2zm-6 6h12v-2H6v2zm0-4h4V7H6v6zm16-7.22v12.44c0 1.54-1.34 2.78-3 2.78H5c-1.64 0-3-1.25-3-2.78V5.78C2 4.26 3.36 3 5 3h14c1.64 0 3 1.25 3 2.78zM19.99 12V5.78c0-.42-.46-.78-1-.78H5c-.54 0-1 .36-1 .78v12.44c0 .42.46.78 1 .78h14c.54 0 1-.36 1-.78V12zM12 9h6V7h-6v2"></path></svg>
+            </div>
+            News
+          </div>
+          <div class="menu-item">
+            <div class="menu-svg">
+              <svg focusable="false" viewBox="0 0 16 16"><path d="M7.503 0c3.09 0 5.502 2.487 5.502 5.427 0 2.337-1.13 3.694-2.26 5.05-.454.528-.906 1.13-1.358 1.734-.452.603-.754 1.508-.98 1.96-.226.452-.377.829-.904.829-.528 0-.678-.377-.905-.83-.226-.451-.527-1.356-.98-1.959-.452-.603-.904-1.206-1.356-1.734C3.132 9.121 2 7.764 2 5.427 2 2.487 4.412 0 7.503 0zm0 1.364c-2.283 0-4.14 1.822-4.14 4.063 0 1.843.86 2.873 1.946 4.177.468.547.942 1.178 1.4 1.79.34.452.596.99.794 1.444.198-.455.453-.992.793-1.445.459-.61.931-1.242 1.413-1.803 1.074-1.29 1.933-2.32 1.933-4.163 0-2.24-1.858-4.063-4.139-4.063zm0 2.734a1.33 1.33 0 11-.001 2.658 1.33 1.33 0 010-2.658"></path></svg>
+            </div>
+            Maps
+          </div>
+          <div class="menu-item">
+            <div class="menu-svg">
+              <svg focusable="false" viewBox="0 0 24 24"><path d="M10 16.5l6-4.5-6-4.5v9zM5 20h14a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1H5a1 1 0 0 0-1 1v14a1 1 0 0 0 1 1zm14.5 2H5a3 3 0 0 1-3-3V4.4A2.4 2.4 0 0 1 4.4 2h15.2A2.4 2.4 0 0 1 22 4.4v15.1a2.5 2.5 0 0 1-2.5 2.5"></path></svg>
+            </div>
+            Videos
+          </div>
+          <div class="menu-item">
+            <div class="menu-svg">
+              <svg focusable="false" viewBox="0 0 24 24"><path d="M21.11 2.89A3.02 3.02 0 0 0 18.95 2h-5.8c-.81 0-1.58.31-2.16.89L7.25 6.63 2.9 10.98a3.06 3.06 0 0 0 0 4.32l5.79 5.8a3.05 3.05 0 0 0 4.32.01l8.09-8.1c.58-.58.9-1.34.9-2.16v-5.8c0-.81-.32-1.59-.89-2.16zM20 10.85c0 .28-.12.54-.32.74l-3.73 3.74-4.36 4.36c-.41.41-1.08.41-1.49 0l-2.89-2.9-2.9-2.9a1.06 1.06 0 0 1 0-1.49l8.1-8.1c.2-.2.46-.3.74-.3l5.8-.01A1.05 1.05 0 0 1 20 5.05v5.8zM16 6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2"></path></svg>
+            </div>
+            Shopping
+          </div>
+          <div class="menu-item">
+            <div class="menu-svg">
+              <svg focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"></path></svg>
+            </div>
+            More
+          </div>
+          <div class="menu-item" style="justify-self: end;">Settings</div>
+          <div class="menu-item">Tools</div>
+        </div>
+        <div class="seperator"></div>
+        <div class="results">
+            <div class="result-stats">
+              About 80,300,000 results (0.54 seconds) 
+            </div>
+            <div class="search-item">
+              <div class="search-item-url"><a href="#"><em>orhanugurlu.github.io</em> › the_odin_project</a></div>
+              <div class="search-item-heading"><a href="#">build this webpage - GitHub Pages</a></div>
+              <div class="search-item-excerpt"><em>build this webpage</em>. This page contains links to solutions of Orhan Ugurlu for The Odin Project. Whole repository is here.&nbsp;...</div>
+            </div>
+            <div class="search-item">
+              <div class="search-item-url"><a href="#"><em>orhanugurlu.github.io</em> › the_odin_project</a></div>
+              <div class="search-item-heading"><a href="#">build this webpage - GitHub Pages</a></div>
+              <div class="search-item-excerpt"><em>build this webpage</em>. This page contains links to solutions of Orhan Ugurlu for The Odin Project. Whole repository is here.&nbsp;...</div>
+            </div>
+            <div class="search-item">
+              <div class="search-item-url"><a href="#"><em>orhanugurlu.github.io</em> › the_odin_project</a></div>
+              <div class="search-item-heading"><a href="#">build this webpage - GitHub Pages</a></div>
+              <div class="search-item-excerpt"><em>build this webpage</em>. This page contains links to solutions of Orhan Ugurlu for The Odin Project. Whole repository is here.&nbsp;...</div>
+            </div>
+            <div class="search-item">
+              <div class="search-item-url"><a href="#"><em>orhanugurlu.github.io</em> › the_odin_project</a></div>
+              <div class="search-item-heading"><a href="#">build this webpage - GitHub Pages</a></div>
+              <div class="search-item-excerpt"><em>build this webpage</em>. This page contains links to solutions of Orhan Ugurlu for The Odin Project. Whole repository is here.&nbsp;...</div>
+            </div>
+            <div class="search-item">
+              <div class="search-item-url"><a href="#"><em>orhanugurlu.github.io</em> › the_odin_project</a></div>
+              <div class="search-item-heading"><a href="#">build this webpage - GitHub Pages</a></div>
+              <div class="search-item-excerpt"><em>build this webpage</em>. This page contains links to solutions of Orhan Ugurlu for The Odin Project. Whole repository is here.&nbsp;...</div>
+            </div>
+            <div class="search-item">
+              <div class="search-item-url"><a href="#"><em>orhanugurlu.github.io</em> › the_odin_project</a></div>
+              <div class="search-item-heading"><a href="#">build this webpage - GitHub Pages</a></div>
+              <div class="search-item-excerpt"><em>build this webpage</em>. This page contains links to solutions of Orhan Ugurlu for The Odin Project. Whole repository is here.&nbsp;...</div>
+            </div>
+            <div class="search-item">
+              <div class="search-item-url"><a href="#"><em>orhanugurlu.github.io</em> › the_odin_project</a></div>
+              <div class="search-item-heading"><a href="#">build this webpage - GitHub Pages</a></div>
+              <div class="search-item-excerpt"><em>build this webpage</em>. This page contains links to solutions of Orhan Ugurlu for The Odin Project. Whole repository is here.&nbsp;...</div>
+            </div>
+            <div class="search-item">
+              <div class="search-item-url"><a href="#"><em>orhanugurlu.github.io</em> › the_odin_project</a></div>
+              <div class="search-item-heading"><a href="#">build this webpage - GitHub Pages</a></div>
+              <div class="search-item-excerpt"><em>build this webpage</em>. This page contains links to solutions of Orhan Ugurlu for The Odin Project. Whole repository is here.&nbsp;...</div>
+            </div>
+            <div class="search-item">
+              <div class="search-item-url"><a href="#"><em>orhanugurlu.github.io</em> › the_odin_project</a></div>
+              <div class="search-item-heading"><a href="#">build this webpage - GitHub Pages</a></div>
+              <div class="search-item-excerpt"><em>build this webpage</em>. This page contains links to solutions of Orhan Ugurlu for The Odin Project. Whole repository is here.&nbsp;...</div>
+            </div>
+            <div class="search-item">
+              <div class="search-item-url"><a href="#"><em>orhanugurlu.github.io</em> › the_odin_project</a></div>
+              <div class="search-item-heading"><a href="#">build this webpage - GitHub Pages</a></div>
+              <div class="search-item-excerpt"><em>build this webpage</em>. This page contains links to solutions of Orhan Ugurlu for The Odin Project. Whole repository is here.&nbsp;...</div>
+            </div>
+        </div>
+        <div class="pages">
+          <table>
+            <tbody>
+              <tr valign="top">
+                <td><span class="pages-o" style="background:url(./images/nav_logo299.webp) no-repeat;background-position:-24px 0;width:28px"></span>&nbsp;</td>
+                <td><span class="pages-o" style="background:url(./images/nav_logo299.webp) no-repeat;background-position:-53px 0;width:20px"></span>1</td>
+                <td><a href="#"><span class="pages-o"></span>2</a></td>
+                <td><a href="#"><span class="pages-o"></span>3</a></td>
+                <td><a href="#"><span class="pages-o"></span>4</a></td>
+                <td><a href="#"><span class="pages-o"></span>5</a></td>
+                <td><a href="#"><span class="pages-o"></span>6</a></td>
+                <td><a href="#"><span class="pages-o"></span>7</a></td>
+                <td><a href="#"><span class="pages-o"></span>8</a></td>
+                <td><a href="#"><span class="pages-o"></span>9</a></td>
+                <td><a href="#"><span class="pages-o"></span>10</a></td>
+                <td><a href="#" style="text-align:left"><span class="pages-o" style="background:url(./images/nav_logo299.webp) no-repeat;background-position:-96px 0;width:71px"></span><span style="display:block;margin-left:53px">Next</span></a></td>
+              </tr>
+            </tbody>          
+          </table>
+        </div>
+        <div class="bottom-panel">
+          <div></div>
+          <div class="bottom-menu bottom-item">
+              <div class="bottom-menu-item"><a href="#">Help</a></div>
+              <div class="bottom-menu-item"><a href="#">Send feedback</a></div>
+              <div class="bottom-menu-item"><a href="#">Privacy</a></div>
+              <div class="bottom-menu-item"><a href="#">Terms</a></div>
+          </div>
+      </div>
+    </div>
   </body>
 </html>
