--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <ul>
         <li>An imitation of Google search page (<a href="https://github.com/orhanugurlu/the_odin_project/tree/master/google-homepage">Solution</a>) (<a href="https://orhanugurlu.github.io/the_odin_project/google-homepage/index.html">View in browser</a>)</li>
         <li>An imitation of Google search results page (<a href="https://github.com/orhanugurlu/the_odin_project/tree/master/google-homepage">Solution</a>) (<a href="https://orhanugurlu.github.io/the_odin_project/google-homepage/search-results.html">View in browser</a>)</li>
+        <li>Rock Paper Scissors game (<a href="https://github.com/orhanugurlu/the_odin_project/tree/master/rock-paper-scissors">Solution</a>) (<a href="https://orhanugurlu.github.io/the_odin_project/rock-paper-scissors/index.html">View in browser</a>)</li>
     </ul>
   </body>
 </html>
