--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li>An imitation of Google search results page (<a href="https://github.com/orhanugurlu/the_odin_project/tree/master/google-homepage">Solution</a>) (<a href="https://orhanugurlu.github.io/the_odin_project/google-homepage/search-results.html">View in browser</a>)</li>
         <li>Rock Paper Scissors game (<a href="https://github.com/orhanugurlu/the_odin_project/tree/master/rock-paper-scissors">Solution</a>) (<a href="https://orhanugurlu.github.io/the_odin_project/rock-paper-scissors/index.html">View in browser</a>)</li>
         <li>Etch-a-Sketch: something between a sketchpad and an Etch-A-Sketch (<a href="https://github.com/orhanugurlu/the_odin_project/tree/master/etch-a-sketch">Solution</a>) (<a href="https://orhanugurlu.github.io/the_odin_project/etch-a-sketch/index.html">View in browser</a>)</li>
+        <li>Calculator (<a href="https://github.com/orhanugurlu/the_odin_project/tree/master/calculator">Solution</a>) (<a href="https://orhanugurlu.github.io/the_odin_project/calculator/index.html">View in browser</a>)</li>
     </ul>
   </body>
 </html>
