Added library project links

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li>Rock Paper Scissors game (<a href="https://github.com/orhanugurlu/the_odin_project/tree/master/rock-paper-scissors">Solution</a>) (<a href="https://orhanugurlu.github.io/the_odin_project/rock-paper-scissors/index.html">View in browser</a>)</li>
         <li>Etch-a-Sketch: something between a sketchpad and an Etch-A-Sketch (<a href="https://github.com/orhanugurlu/the_odin_project/tree/master/etch-a-sketch">Solution</a>) (<a href="https://orhanugurlu.github.io/the_odin_project/etch-a-sketch/index.html">View in browser</a>)</li>
         <li>Calculator (<a href="https://github.com/orhanugurlu/the_odin_project/tree/master/calculator">Solution</a>) (<a href="https://orhanugurlu.github.io/the_odin_project/calculator/index.html">View in browser</a>)</li>
+        <li>Library (<a href="https://github.com/orhanugurlu/the_odin_project/tree/master/library">Solution</a>) (<a href="https://orhanugurlu.github.io/the_odin_project/library/index.html">View in browser</a>)</li>
     </ul>
   </body>
 </html>
