--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Rock Paper Scissors Game</title>
     <style>
         @import url(http://fonts.googleapis.com/css?family=Roboto); 
