Tic-Tac-Toe empty project and improved projects index.html

--- a/index.html
+++ b/index.html
@@ -2,20 +2,49 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>    
     <title>Solutions for The Odin Project</title>
+    <style>
+      body {
+        font-family: 'Roboto', Arial, Helvetica, sans-serif;
+        margin: 0;
+        padding: 0;
+      }
+      #main {
+        display: flex;
+        flex-direction: column;
+      }
+      h1 {
+        margin-top: 0;
+        padding: 1em 0 1em 0;
+        text-align: center;
+        width: 100%;
+        color: wheat;
+        background-color: darkred;
+      }
+      p {
+        margin: 0;
+        padding: 0.75em;
+      }
+    </style>
   </head>
   <body>
-    <h1>Solutions for The Odin Project</h1>
-    <p>This page contains links to solutions of <a href="https://github.com/orhanugurlu">Orhan Ugurlu</a> for The Odin Project.</p>
-    <p>Whole repository is <a href="https://github.com/orhanugurlu/the_odin_project">here</a>.</p>
-    <p>See below list to access each project's sources and view them in browser.</p>
-    <ul>
-        <li>An imitation of Google search page (<a href="https://github.com/orhanugurlu/the_odin_project/tree/master/google-homepage">Solution</a>) (<a href="https://orhanugurlu.github.io/the_odin_project/google-homepage/index.html">View in browser</a>)</li>
-        <li>An imitation of Google search results page (<a href="https://github.com/orhanugurlu/the_odin_project/tree/master/google-homepage">Solution</a>) (<a href="https://orhanugurlu.github.io/the_odin_project/google-homepage/search-results.html">View in browser</a>)</li>
-        <li>Rock Paper Scissors game (<a href="https://github.com/orhanugurlu/the_odin_project/tree/master/rock-paper-scissors">Solution</a>) (<a href="https://orhanugurlu.github.io/the_odin_project/rock-paper-scissors/index.html">View in browser</a>)</li>
-        <li>Etch-a-Sketch: something between a sketchpad and an Etch-A-Sketch (<a href="https://github.com/orhanugurlu/the_odin_project/tree/master/etch-a-sketch">Solution</a>) (<a href="https://orhanugurlu.github.io/the_odin_project/etch-a-sketch/index.html">View in browser</a>)</li>
-        <li>Calculator (<a href="https://github.com/orhanugurlu/the_odin_project/tree/master/calculator">Solution</a>) (<a href="https://orhanugurlu.github.io/the_odin_project/calculator/index.html">View in browser</a>)</li>
-        <li>Library (<a href="https://github.com/orhanugurlu/the_odin_project/tree/master/library">Solution</a>) (<a href="https://orhanugurlu.github.io/the_odin_project/library/index.html">View in browser</a>)</li>
-    </ul>
+    <div id="main">
+      <h1>Solutions for The Odin Project</h1>
+      <p>This page contains links to solutions of <a href="https://github.com/orhanugurlu">Orhan Ugurlu</a> for The Odin Project.</p>
+      <p>Whole repository is <a href="https://github.com/orhanugurlu/the_odin_project">here</a>.</p>
+      <p>See below list to access each project's sources and view them in browser.
+        <ul>
+            <li>An imitation of Google search page (<a target="_blank" href="https://github.com/orhanugurlu/the_odin_project/tree/master/google-homepage">Solution</a>) (<a target="_blank" href="https://orhanugurlu.github.io/the_odin_project/google-homepage/index.html">View in browser</a>)</li>
+            <li>An imitation of Google search results page (<a target="_blank" href="https://github.com/orhanugurlu/the_odin_project/tree/master/google-homepage">Solution</a>) (<a target="_blank" href="https://orhanugurlu.github.io/the_odin_project/google-homepage/search-results.html">View in browser</a>)</li>
+            <li>Rock Paper Scissors game (<a target="_blank" href="https://github.com/orhanugurlu/the_odin_project/tree/master/rock-paper-scissors">Solution</a>) (<a target="_blank" href="https://orhanugurlu.github.io/the_odin_project/rock-paper-scissors/index.html">View in browser</a>)</li>
+            <li>Etch-a-Sketch: something between a sketchpad and an Etch-A-Sketch (<a target="_blank" href="https://github.com/orhanugurlu/the_odin_project/tree/master/etch-a-sketch">Solution</a>) (<a target="_blank" href="https://orhanugurlu.github.io/the_odin_project/etch-a-sketch/index.html">View in browser</a>)</li>
+            <li>Calculator (<a target="_blank" href="https://github.com/orhanugurlu/the_odin_project/tree/master/calculator">Solution</a>) (<a target="_blank" href="https://orhanugurlu.github.io/the_odin_project/calculator/index.html">View in browser</a>)</li>
+            <li>Library (<a target="_blank" href="https://github.com/orhanugurlu/the_odin_project/tree/master/library">Solution</a>) (<a target="_blank" href="https://orhanugurlu.github.io/the_odin_project/library/index.html">View in browser</a>)</li>
+            <li>Tic Tac Toe (<a target="_blank" href="https://github.com/orhanugurlu/the_odin_project/tree/master/tic-tac-toe">Solution</a>) (<a target="_blank" href="https://orhanugurlu.github.io/the_odin_project/tic-tac-toe/index.html">View in browser</a>)</li>
+        </ul>
+      </p>
+    </div>
   </body>
 </html>
